publication/gke-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
  labels:
    app: kubeless-pubfn
  name: pubfn
  namespace: dictybase
spec:
  rules:
  - host: siddfunc.dictybase.dev
    http:
      paths:
      - backend:
          serviceName: pubfn
          servicePort: 8080
        path: /publications/(.*)
  tls:
  - hosts:
    - siddfunc.dictybase.dev
    secretName: dictybase-devsidd-tls
